src/tests/snapshots/niri__tests__window_opening__check_target_size@dhP0.5.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 616 × 336, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 336, bounds: 1248 × 688, states: [Activated]
